{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 362,
  "lineage": "3a7509b7-3703-ce2f-de5e-433152204bf4",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_to_tg_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d-20251122131938507000000009",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d",
            "target_id": "i-0fffc5b229f00257e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.network.aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.webserver-1.aws_instance.web",
            "module.webserver-2.aws_instance.web"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_to_tg_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d-20251122131938450400000008",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d",
            "target_id": "i-0cb6b8a6a628ebe58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.network.aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.webserver-1.aws_instance.web",
            "module.webserver-2.aws_instance.web"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:loadbalancer/app/eao-infra-alb/15e54441377a3039",
            "arn_suffix": "app/eao-infra-alb/15e54441377a3039",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "eao-infra-alb-2022314656.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:loadbalancer/app/eao-infra-alb/15e54441377a3039",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eao-infra-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-03b0ff495f22db424"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01426162481072648"
              },
              {
                "subnet_id": "subnet-043e6fc420936b37d"
              }
            ],
            "subnets": [
              "subnet-01426162481072648",
              "subnet-043e6fc420936b37d"
            ],
            "tags": {
              "Environment": "Development",
              "Project": "eao-infra"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "eao-infra"
            },
            "vpc_id": "vpc-04bd472aca69a5ea5",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:loadbalancer/app/eao-infra-alb/15e54441377a3039"
          },
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:listener/app/eao-infra-alb/15e54441377a3039/087bddc7789748b0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:listener/app/eao-infra-alb/15e54441377a3039/087bddc7789748b0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:loadbalancer/app/eao-infra-alb/15e54441377a3039",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:listener/app/eao-infra-alb/15e54441377a3039/087bddc7789748b0"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb.alb",
            "module.loadbalancer.aws_lb_target_group.tg",
            "module.network.aws_security_group.alb-sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d",
            "arn_suffix": "targetgroup/eao-infra-tg/828c79520e90f64d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "eao-infra-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Development",
              "Project": "eao-infra"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "eao-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:064810084010:targetgroup/eao-infra-tg/828c79520e90f64d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070cdc855789d1b11",
            "arn": "arn:aws:ec2:ap-south-1:064810084010:elastic-ip/eipalloc-070cdc855789d1b11",
            "domain": "vpc",
            "id": "eipalloc-070cdc855789d1b11",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-10-205.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.10.205",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-eip-1"
            },
            "tags_all": {
              "Name": "eao-infra-eip-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07afd667ddd7d8fee",
            "arn": "arn:aws:ec2:ap-south-1:064810084010:elastic-ip/eipalloc-07afd667ddd7d8fee",
            "domain": "vpc",
            "id": "eipalloc-07afd667ddd7d8fee",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-12-169.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.12.169",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-eip-2"
            },
            "tags_all": {
              "Name": "eao-infra-eip-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:internet-gateway/igw-0b09e853fdfa33be3",
            "id": "igw-0b09e853fdfa33be3",
            "owner_id": "064810084010",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-igw"
            },
            "tags_all": {
              "Name": "eao-infra-igw"
            },
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070cdc855789d1b11",
            "association_id": "eipassoc-03802ab33bb22a473",
            "connectivity_type": "public",
            "id": "nat-0cdce27b02393d6a9",
            "network_interface_id": "eni-0147527f440ded6a2",
            "private_ip": "10.2.0.14",
            "public_ip": "3.109.10.205",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-084192c1b1e69af7b",
            "tags": {
              "Name": "eao-infra-nat-gateway-1"
            },
            "tags_all": {
              "Name": "eao-infra-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07afd667ddd7d8fee",
            "association_id": "eipassoc-0c23544c0eda26c87",
            "connectivity_type": "public",
            "id": "nat-0c0b242cddbc43ef2",
            "network_interface_id": "eni-0b4a42c051a5e4ff1",
            "private_ip": "10.2.0.42",
            "public_ip": "13.202.12.169",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-095cdda6e53c1fb9d",
            "tags": {
              "Name": "eao-infra-nat-gateway-2"
            },
            "tags_all": {
              "Name": "eao-infra-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:network-acl/acl-0d33f46b5079cbc39",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0d33f46b5079cbc39",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "064810084010",
            "region": "ap-south-1",
            "subnet_ids": [],
            "tags": {
              "Name": "eao-infra-nacl"
            },
            "tags_all": {
              "Name": "eao-infra-nacl"
            },
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_subnet_to_nacl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c49742ea988dfe5e",
            "network_acl_id": "acl-0d33f46b5079cbc39",
            "region": "ap-south-1",
            "subnet_id": "subnet-043e6fc420936b37d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.nacl",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04961aa133356e70e",
            "network_acl_id": "acl-0d33f46b5079cbc39",
            "region": "ap-south-1",
            "subnet_id": "subnet-01426162481072648"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.nacl",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_subnet_to_nacl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-05e748d6fd8f97063",
            "network_acl_id": "acl-0d33f46b5079cbc39",
            "region": "ap-south-1",
            "subnet_id": "subnet-084192c1b1e69af7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.nacl",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0ddeccbd5e2acaa0a",
            "network_acl_id": "acl-0d33f46b5079cbc39",
            "region": "ap-south-1",
            "subnet_id": "subnet-095cdda6e53c1fb9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.nacl",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:route-table/rtb-010b824dda0b25c59",
            "id": "rtb-010b824dda0b25c59",
            "owner_id": "064810084010",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cdce27b02393d6a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eao-infra-private-subnet-1-rt"
            },
            "tags_all": {
              "Name": "eao-infra-private-subnet-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "rtb-010b824dda0b25c59",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:route-table/rtb-029544ebd7083202f",
            "id": "rtb-029544ebd7083202f",
            "owner_id": "064810084010",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c0b242cddbc43ef2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eao-infra-private-subnet-2-rt"
            },
            "tags_all": {
              "Name": "eao-infra-private-subnet-2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "rtb-029544ebd7083202f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:route-table/rtb-08a78adb755bc3dba",
            "id": "rtb-08a78adb755bc3dba",
            "owner_id": "064810084010",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b09e853fdfa33be3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eao-infra-public-subnet-rt"
            },
            "tags_all": {
              "Name": "eao-infra-public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "rtb-08a78adb755bc3dba",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_to_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d4f06982017b8d6",
            "region": "ap-south-1",
            "route_table_id": "rtb-010b824dda0b25c59",
            "subnet_id": "subnet-043e6fc420936b37d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_subnet_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07351d7c93116fb81",
            "region": "ap-south-1",
            "route_table_id": "rtb-029544ebd7083202f",
            "subnet_id": "subnet-01426162481072648"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_subnet_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_to_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0521dca61569306b5",
            "region": "ap-south-1",
            "route_table_id": "rtb-08a78adb755bc3dba",
            "subnet_id": "subnet-084192c1b1e69af7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_subnet_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ef03219c21d04e6",
            "region": "ap-south-1",
            "route_table_id": "rtb-08a78adb755bc3dba",
            "subnet_id": "subnet-095cdda6e53c1fb9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_subnet_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:security-group/sg-03b0ff495f22db424",
            "description": "Security group for alb traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b0ff495f22db424",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eao-infra-alb-sg",
            "name_prefix": "",
            "owner_id": "064810084010",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eao-infra-alb-sg"
            },
            "tags_all": {
              "Name": "eao-infra-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "sg-03b0ff495f22db424",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:security-group/sg-07645dd5c434ab5ea",
            "description": "Security group for ec2 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07645dd5c434ab5ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eao-infra-ec2-sg",
            "name_prefix": "",
            "owner_id": "064810084010",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eao-infra-ec2-sg"
            },
            "tags_all": {
              "Name": "eao-infra-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "sg-07645dd5c434ab5ea",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:security-group/sg-06651b9ded3ffdd14",
            "description": "Security group for endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06651b9ded3ffdd14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eao-infra-endpoint-sg",
            "name_prefix": "",
            "owner_id": "064810084010",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eao-infra-endpoint-sg"
            },
            "tags_all": {
              "Name": "eao-infra-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "sg-06651b9ded3ffdd14",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:subnet/subnet-043e6fc420936b37d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043e6fc420936b37d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064810084010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-private-subnet-1"
            },
            "tags_all": {
              "Name": "eao-infra-private-subnet-1"
            },
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "subnet-043e6fc420936b37d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:subnet/subnet-01426162481072648",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01426162481072648",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064810084010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-private-subnet-2"
            },
            "tags_all": {
              "Name": "eao-infra-private-subnet-2"
            },
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "subnet-01426162481072648",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:subnet/subnet-084192c1b1e69af7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084192c1b1e69af7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064810084010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-public-subnet-1"
            },
            "tags_all": {
              "Name": "eao-infra-public-subnet-1"
            },
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "subnet-084192c1b1e69af7b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:subnet/subnet-095cdda6e53c1fb9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095cdda6e53c1fb9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064810084010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-public-subnet-2"
            },
            "tags_all": {
              "Name": "eao-infra-public-subnet-2"
            },
            "vpc_id": "vpc-04bd472aca69a5ea5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "subnet-095cdda6e53c1fb9d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:064810084010:vpc/vpc-04bd472aca69a5ea5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/26",
            "default_network_acl_id": "acl-00428bd88f14d0977",
            "default_route_table_id": "rtb-043d1c0bd47c1eeed",
            "default_security_group_id": "sg-02eb69ed22d048690",
            "dhcp_options_id": "dopt-07ecb52226cd183b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04bd472aca69a5ea5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043d1c0bd47c1eeed",
            "owner_id": "064810084010",
            "region": "ap-south-1",
            "tags": {
              "Name": "eao-infra-vpc"
            },
            "tags_all": {
              "Name": "eao-infra-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "vpc-04bd472aca69a5ea5",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.webserver-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01760eea5c574eb86",
            "arn": "arn:aws:ec2:ap-south-1:064810084010:instance/i-0fffc5b229f00257e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fffc5b229f00257e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "docker-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05ab03d411ce6fa82"
              }
            ],
            "primary_network_interface_id": "eni-05ab03d411ce6fa82",
            "private_dns": "ip-10-2-0-25.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.25",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0822d38f21ad837de",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07645dd5c434ab5ea"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043e6fc420936b37d",
            "tags": {
              "Environment": "Development",
              "Name": "eao-infra-web-server-1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "eao-infra-web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07645dd5c434ab5ea"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "i-0fffc5b229f00257e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01760eea5c574eb86",
            "arn": "arn:aws:ec2:ap-south-1:064810084010:instance/i-0cb6b8a6a628ebe58",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb6b8a6a628ebe58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "docker-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-001dbc58001b015e6"
              }
            ],
            "primary_network_interface_id": "eni-001dbc58001b015e6",
            "private_dns": "ip-10-2-0-52.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.52",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e22aff269e1db254",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07645dd5c434ab5ea"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01426162481072648",
            "tags": {
              "Environment": "Development",
              "Name": "eao-infra-web-server-2"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "eao-infra-web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07645dd5c434ab5ea"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "064810084010",
            "id": "i-0cb6b8a6a628ebe58",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_security_group.ec2-sg",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}